--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "uuid": "^9.0.0"
   }
 }
